Dark mode fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,10 @@ body {
   line-height: 1.5;
 }
 
+html {
+  forced-color-adjust: none;
+}
+
 body {
   color-scheme: light;
 }
