--- a/src/styles/settings/_reset.scss
+++ b/src/styles/settings/_reset.scss
@@ -11,6 +11,9 @@ body {
   font-size: 100%;
   line-height: 1.5;
 }
+html {
+  forced-color-adjust: none;
+}
 body {
   color-scheme: light;
 }
